--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -161,7 +161,7 @@
                     <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 
                         <li class="nav-item start {{.DashboardActive}}">
-                            <a href="/" class="nav-link ">
+                            <a href="/site" class="nav-link ">
                                 <i class="icon-home"></i>
                                 <span class="title">Dashboard</span>
                             </a>
