--- a/views/site/index.html
+++ b/views/site/index.html
@@ -22,56 +22,32 @@
 
 <!-- BEGIN DASHBOARD STATS 1-->
 <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <a class="dashboard-stat dashboard-stat-v2 blue" href="#">
-            <div class="visual">
-                <i class="fa fa-comments"></i>
-            </div>
-            <div class="details">
-                <div class="number">
-                    <span data-counter="counterup" data-value="1349">0</span>
-                </div>
-                <div class="desc"> Placeholder </div>
-            </div>
-        </a>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <a class="dashboard-stat dashboard-stat-v2 red" href="#">
             <div class="visual">
                 <i class="fa fa-bar-chart-o"></i>
             </div>
             <div class="details">
                 <div class="number">
-                    <span data-counter="counterup" data-value="12,5">0</span>M$ </div>
-                <div class="desc"> Placeholder </div>
+                    <span data-counter="counterup" data-value="{{.TotalPayment}}">{{.TotalPayment}}</span> </div>
+                <div class="desc"> Total Amount Paid </div>
             </div>
         </a>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <a class="dashboard-stat dashboard-stat-v2 green" href="#">
             <div class="visual">
                 <i class="fa fa-shopping-cart"></i>
             </div>
             <div class="details">
                 <div class="number">
-                    <span data-counter="counterup" data-value="549">0</span>
+                    <span data-counter="counterup" data-value="{{.ConfirmedPayment}}">{{.ConfirmedPayment}}</span>
                 </div>
-                <div class="desc"> Placeholder </div>
+                <div class="desc"> No of Payment </div>
             </div>
         </a>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-        <a class="dashboard-stat dashboard-stat-v2 purple" href="#">
-            <div class="visual">
-                <i class="fa fa-globe"></i>
-            </div>
-            <div class="details">
-                <div class="number"> +
-                    <span data-counter="counterup" data-value="89"></span>% </div>
-                <div class="desc"> Placeholder </div>
-            </div>
-        </a>
-    </div>
+
 </div>
 <div class="clearfix"></div>
 <!-- END DASHBOARD STATS 1-->
