--- a/views/taxpayment/pending.html
+++ b/views/taxpayment/pending.html
@@ -85,7 +85,7 @@
                                 <option value="{{$tax.Id}}">{{$tax.TaxType.Name}} [{{$tax.Amount}}]</option>
                                 {{end}}
                             </select>
-                            <label for="taxTypeId">Tax</label>
+                            <label for="taxId">Tax</label>
                         </div>
 
                         <div class="form-group form-md-line-input form-md-floating-label">
