--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -795,6 +795,9 @@
             <!-- BEGIN THEME GLOBAL SCRIPTS -->
             <script src="/static/assets/global/scripts/app.min.js" type="text/javascript"></script>
             <!-- END THEME GLOBAL SCRIPTS -->
+
+
+
             <!-- BEGIN THEME LAYOUT SCRIPTS -->
             <script src="/static/assets/layouts/layout2/scripts/layout.min.js" type="text/javascript"></script>
             <script src="/static/assets/layouts/layout2/scripts/demo.min.js" type="text/javascript"></script>
@@ -803,6 +806,8 @@
             <!-- END THEME LAYOUT SCRIPTS -->
 
 <!-- End -->
+
+    {{ .Scripts }}
 
 </body>
 
