--- a/views/site/index.html
+++ b/views/site/index.html
@@ -15,10 +15,6 @@
         </li>
     </ul>
 </div>
-<!-- END PAGE HEADER-->
-<div class="note note-info">
-    <p> Welcome to Tax Master </p>
-</div>
 
 <!-- BEGIN DASHBOARD STATS 1-->
 <div class="row">
@@ -65,3 +61,124 @@
 </div>
 <div class="clearfix"></div>
 <!-- END DASHBOARD STATS 1-->
+<!-- BEGIN : GOOGLE PIE CHARTS -->
+<div class="row">
+    <div class="col-md-8">
+        <div class="portlet light portlet-fit ">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class=" icon-layers font-green"></i>
+                    <span class="caption-subject font-green bold uppercase">Payment Trend</span>
+                </div>
+            </div>
+            <div class="portlet-body">
+
+
+
+
+                <!-- Styles -->
+                <style>
+#chartdiv {
+  width: 100%;
+  height: 500px;
+}
+
+</style>
+
+                <!-- Resources -->
+                <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+                <script src="https://www.amcharts.com/lib/3/serial.js"></script>
+                <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
+                <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+                <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+
+                <!-- Chart code -->
+                <script>
+var chart = AmCharts.makeChart("chartdiv", {
+  "type": "serial",
+  "theme": "light",
+  "marginRight": 70,
+  "dataProvider": {{.MothlyChartData}},
+  "valueAxes": [{
+    "axisAlpha": 0,
+    "position": "left",
+    "title": "Monthly Payment Trend"
+  }],
+  "startDuration": 1,
+  "graphs": [{
+    "balloonText": "<b>[[month]]: [[amount]]</b>",
+    "fillColorsField": "color",
+    "fillAlphas": 0.9,
+    "lineAlpha": 0.2,
+    "type": "column",
+    "valueField": "amount"
+  }],
+  "chartCursor": {
+    "categoryBalloonEnabled": false,
+    "cursorAlpha": 0,
+    "zoomable": false
+  },
+  "categoryField": "month",
+  "categoryAxis": {
+    "gridPosition": "start",
+    "labelRotation": 45
+  },
+  "export": {
+    "enabled": true
+  }
+
+});
+</script>
+
+                <div id="chartdiv"></div>
+
+
+
+
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="portlet light portlet-fit ">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class=" icon-layers font-green"></i>
+                    <span class="caption-subject font-green bold uppercase">Tax Types</span>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div id="piechart" style="height:500px;"></div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div class="clearfix"></div>
+<!-- BEGIN : GOOGLE PIE CHARTS -->
+
+
+<!-- BEGIN PAGE LEVEL SCRIPTS -->
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+          google.charts.load('current', {'packages':['corechart']});
+          google.charts.setOnLoadCallback(drawChart);
+
+          function drawChart() {
+
+            var data = google.visualization.arrayToDataTable({{.ChartData}});
+
+            var options = {
+              title: 'Tax Payment By Types'
+            };
+
+            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+            chart.draw(data, options);
+          }
+        </script>
+
+<!-- END PAGE LEVEL SCRIPTS -->
+
