--- a/views/public/index.html
+++ b/views/public/index.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Tax Master | Login</title>
+    <title>Tax Master | Home</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Preview page of Metronic Admin Theme #2 for " name="description" />
