--- a/views/taxpayment/report.html
+++ b/views/taxpayment/report.html
@@ -34,6 +34,35 @@
                 </div>
             </div>
             <div class="portlet-body form">
+                <div class="row">
+                    <form>
+                        <div class="form-group col-md-3">
+                            <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                            <label for="startDate">START DATE</label>
+                            <input required class="form-control form-control-solid placeholder-no-fix" type="date"
+                                   autocomplete="off" name="startDate" id="startDate" />
+                        </div>
+                        <div class="form-group col-md-3">
+                            <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                            <label for="endDate">END DATE</label>
+                            <input required class="form-control form-control-solid placeholder-no-fix" type="date"
+                                   autocomplete="off" name="endDate" id="endDate" />
+                        </div>
+                        <div class="form-group col-md-3">
+                            <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                            <label for="taxTypeId">TAX TYPE</label>
+                            <select class="form-control" id="taxTypeId" name="taxTypeId">
+                                <option value="">All</option>
+                                {{range $tax := .TaxTypes}}
+                                <option value="{{$tax.Id}}">{{$tax.Name}}</option>
+                                {{end}}
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3"><input style="margin-top:24px;" type="submit" value="Apply Filter" class="btn btn-sm btn-primary"></div>
+                    </form>
+                </div>
+                <div class="clearfix"></div>
+                <h5>{{.TimelineText}}</h5>
                 <table class="table">
                     <tr>
                         <th>Tax Type</th>
