--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -75,10 +75,8 @@
                 </div>
                 <div class="form-actions">
                     <div class="pull-left">
-                        <label class="rememberme mt-checkbox mt-checkbox-outline">
-                            <input type="checkbox" name="remember" value="1" /> Remember me
-                            <span></span>
-                        </label>
+                        <a href="/register">Create Account</a>
+
                     </div>
                     <div class="pull-right forget-password-block">
                         <a href="javascript:;" id="forget-password" class="forget-password">Forgot Password?</a>
