--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -110,24 +110,34 @@
                         <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                         <label>Password</label>
                         <input required class="form-control form-control-solid placeholder-no-fix" type="password"
-                               autocomplete="off" name="Password" />
+                               name="Password" />
                     </div>
                     <div class="form-group col-md-6">
                         <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                         <label>Confirm Password</label>
-                        <input required class="form-control form-control-solid placeholder-no-fix" type="text"
-                               autocomplete="off" name="ConfirmPassword" />
+                        <input required class="form-control form-control-solid placeholder-no-fix" type="password"
+                               name="ConfirmPassword" />
                     </div>
                 </div>
 
-                <div class="form-group col-md-12">
-                    <label>Bank</label>
-                    <select required class="form-control" name="BankId">
-                        <option value=""></option>
-                        {{range $bank := .Banks}}
-                        <option value="{{$bank.Id}}">{{$bank.Name}}</option>
-                        {{end}}
-                    </select>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
+                        <label>Referral Code</label>
+                        <input class="form-control form-control-solid placeholder-no-fix" type="text"
+                               name="ReferralCode" />
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <label>Bank</label>
+                        <select class="form-control" name="BankId">
+                            <option value=""></option>
+                            {{range $bank := .Banks}}
+                            <option value="{{$bank.Id}}">{{$bank.Name}}</option>
+                            {{end}}
+                        </select>
+                    </div>
+
                 </div>
 
 
@@ -135,14 +145,14 @@
                     <div class="form-group col-md-6">
                         <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                         <label>Account Name</label>
-                        <input required class="form-control form-control-solid placeholder-no-fix" type="text"
-                               autocomplete="off" name="AccountName" />
+                        <input class="form-control form-control-solid placeholder-no-fix" type="text"
+                               name="AccountName" />
                     </div>
                     <div class="form-group col-md-6">
                         <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
                         <label>Account Number</label>
-                        <input required class="form-control form-control-solid placeholder-no-fix" type="text"
-                               autocomplete="off" name="AccountNumber" />
+                        <input class="form-control form-control-solid placeholder-no-fix" type="text"
+                               name="AccountNumber" />
                     </div>
                 </div>
 
