--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -65,18 +65,13 @@
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                     <img alt="" class="img-circle" src="/static/assets/layouts/layout2/img/avatar3_small.jpg" />
-                                    <span class="username username-hide-on-mobile"> Anthony </span>
+                                    <span class="username username-hide-on-mobile"> {{.CurrentMember.FirstName}}  {{.CurrentMember.LastName}} </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
-                                        <a href="/profile">
+                                        <a href="/account">
                                             <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                    <li class="divider"> </li>
-                                    <li>
-                                        <a href="auth/lockscreen">
-                                            <i class="icon-lock"></i> Lock Screen </a>
                                     </li>
                                     <li>
                                         <a href="/logout">
@@ -116,33 +111,21 @@
                     <ul class="page-sidebar-menu  page-header-fixed page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 
                         <li class="nav-item start {{.DashboardActive}}">
-                            <a href="/site" class="nav-link ">
+                            <a href="/dashboard" class="nav-link ">
                                 <i class="icon-home"></i>
                                 <span class="title">Dashboard</span>
                             </a>
                         </li>
-                        <li class="nav-item start {{.TaxTypeActive}}">
-                            <a href="/taxes/types" class="nav-link ">
+                        <li class="nav-item start {{.ProfileActive}}">
+                            <a href="/account" class="nav-link ">
                                 <i class="icon-puzzle"></i>
-                                <span class="title">Tax Types</span>
+                                <span class="title">My Profile</span>
                             </a>
                         </li>
-                        <li class="nav-item start {{.TaxPayerActive}}">
-                            <a href="/taxes/payers" class="nav-link ">
+                        <li class="nav-item start {{.PaymentActive}}">
+                            <a href="#" class="nav-link ">
                                 <i class="icon-briefcase"></i>
-                                <span class="title">Tax Payers</span>
-                            </a>
-                        </li>
-                        <li class="nav-item start {{.TaxAssessmentActive}}">
-                            <a href="/taxes" class="nav-link ">
-                                <i class="icon-settings"></i>
-                                <span class="title">Tax Assessments</span>
-                            </a>
-                        </li>
-                        <li class="nav-item start {{.ReportActive}}">
-                            <a href="/taxes/payment/report" class="nav-link ">
-                                <i class="icon-wallet"></i>
-                                <span class="title">Report</span>
+                                <span class="title">Payments</span>
                             </a>
                         </li>
                     </ul>
@@ -156,6 +139,12 @@
                 <!-- BEGIN CONTENT BODY -->
                 <div class="page-content">
 
+                    <div class="">
+                        {{if .flash.error}}
+                        <blockquote>{{.flash.error}}</blockquote>
+                        {{end}}
+                    </div>
+
                     {{.LayoutContent}}
 
                 </div>
@@ -167,7 +156,7 @@
         <!-- END CONTAINER -->
         <!-- BEGIN FOOTER -->
         <div class="page-footer">
-            <div class="page-footer-inner"> 2016 &copy; Taxmaster
+            <div class="page-footer-inner"> 2017 &copy; H2GH
                 <div class="scroll-to-top">
                     <i class="icon-arrow-up"></i>
                 </div>
