--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -18,6 +18,24 @@
 
 <div class="row">
 
+    <div class="col-md-12">
+        <div class="portlet light portlet-fit">
+            <div class="portlet-title">
+                <div class="caption">
+                    <i class=" icon-layers font-green"></i>
+                    <span class="caption-subject font-green bold uppercase">Refer And Earn</span>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <h4>Referral Code: <small>{{.ReferralCode}}</small></h4>
+                <h4>Referral Link: <small>http://www.help2gethelp.com/register?r={{.ReferralCode}}</small></h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+
 
     <script>
 
