--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -128,6 +128,12 @@
                                 <span class="title">Payments</span>
                             </a>
                         </li>
+                        <li class="nav-item start {{.DownlinesActive}}">
+                            <a href="/downlines" class="nav-link ">
+                                <i class="icon-users"></i>
+                                <span class="title">Downlines</span>
+                            </a>
+                        </li>
                     </ul>
                     <!-- END SIDEBAR MENU -->
                 </div>
@@ -145,7 +151,7 @@
                         {{end}}
                     </div>
 
-                    {{.LayoutContent}}
+                    {{.LayoutContent .}}
 
                 </div>
                 <!-- END CONTENT BODY -->
