--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -151,7 +151,7 @@
                         {{end}}
                     </div>
 
-                    {{.LayoutContent .}}
+                    {{.LayoutContent}}
 
                 </div>
                 <!-- END CONTENT BODY -->
