--- a/views/shared/layout.html
+++ b/views/shared/layout.html
@@ -64,7 +64,7 @@
                             <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
                             <li class="dropdown dropdown-user">
                                 <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
-                                    <img alt="" class="img-circle" src="/static/assets/layouts/layout2/img/avatar3_small.jpg" />
+                                    <img alt="" class="img-circle" src="/static/img/member.jpg" />
                                     <span class="username username-hide-on-mobile"> {{.CurrentMember.FirstName}}  {{.CurrentMember.LastName}} </span>
                                     <i class="fa fa-angle-down"></i>
                                 </a>
