home page update

--- a/views/public/home.html
+++ b/views/public/home.html
@@ -68,7 +68,7 @@
             </ul>
 
             <h4>Make money from referral</h4>
-            <p>The system is built to be the most rewarding ever. And to pust he power to make more money in the hand of the users</p>
+            <p>The system is built to be the most rewarding ever. And to put the power to make more money in the hand of the users</p>
             <ul>
                 <li>Share your referral code and get people to register under you</li>
                 <li>Make 5000 Naira <span class="font-red">every time</span> they make a donation</li>
