--- a/views/public/home.html
+++ b/views/public/home.html
@@ -30,7 +30,7 @@
             <div class="col-md-8">
                 <h1 class="hero-heading wow fadeInDown" data-wow-duration="0.6s">Robust Referral System</h1>
                 <p class="hero-text wow bounceInUp" data-wow-duration="0.9s" data-wow-delay="0.2s">
-                    You will make 5000 Naira everytime your downline make a donation. That is alot of money
+                    You will make 1000 Naira for everyone that join the system through you referral link. That is alot of money
                 </p>
                 <a href="/register" class="btn-outline-inverse hero-btn wow fadeInUp"
                    data-wow-delay="0.4s" title="Purchase Button">Register Now</a>
@@ -64,7 +64,7 @@
                 <li>Make a Donation of 5,000 Naira</li>
                 <li>The system gives you <span class="font-red">12 hours</span> to pay your beneficiary</li>
                 <li>The system matches you with two people within 12 hours to 7 days</li>
-                <li>You will be paid 8,000</li>
+                <li>You will be paid 10,000</li>
             </ul>
 
             <h4>Make money from referral</h4>
@@ -73,7 +73,7 @@
 
             <ul>
                 <li>Share your referral code and get people to register under you</li>
-                <li>Make 1000 Naira <span class="font-red">every time</span> they make a donation</li>
+                <li>Make 1000 Naira <span class="font-red">every time</span> someone join the system through your referral link</li>
             </ul>
         </div>
 
@@ -82,7 +82,7 @@
                 <i class="icon-large glyph-icon bg-white border-default btn-border icon-linecons-clock wow bounceInDown" data-wow-delay="1s"></i>
                 <h3 class="text-transform-upr icon-title wow fadeInUp">Donation 5000</h3>
                 <p class="icon-content wow fadeInUp">
-                    Donate 5000 and get 8000. Its that easy<br />
+                    Donate 5000 and get 10000. Its that easy<br />
                     <a class="btn btn-block btn-danger" href="/register">Register</a>
                 </p>
             </div>
