--- a/views/public/home.html
+++ b/views/public/home.html
@@ -57,6 +57,18 @@
 
 <div class="container large-padding" id="howItWorks">
     <div class="row">
+        <div class="col-md-12">
+            <p>
+                Our strategic plan is to help people find their purpose and fulfill their dreams.
+                Also, by helping individuals help themselves and ultimately help their communities.
+            </p>
+
+            <p>
+                Anyone can get help in every area of their being with our programme, whether it be physical, mental, social, financial, etc.
+            </p>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-6">
             <h3>How it works</h3>
             <ul>
